--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "atempo-cal",
+  "author": "Josue Orozco A.",
+  "license": "MIT",
   "version": "0.1.0",
   "description": "A simple Resource Calendar for Vue 3",
   "type": "module",
   "main": "./dist/atempo-cal.umd.js",
   "module": "./dist/atempo-cal.es.js",
   "types": "./dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NaturalDevCR/AtempoCal.git"
+  },
   "exports": {
     ".": {
       "import": "./dist/atempo-cal.es.js",
