--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "release": "npm run build && npm version patch && npm publish"
+    "release": "npm run build && npm version patch",
+    "postversion": "npm publish"
   },
   "dependencies": {
     "atemporal": "^0.1.0",
