--- a/package.json
+++ b/package.json
@@ -1,27 +1,7 @@
 {
   "name": "atempo-cal",
-  "version": "0.2.3",
-  "private": false,
-  "description": "A flexible and resource-centric calendar component for Vue 3, designed for planning and scheduling tasks.",
-  "author": "NaturalDevCR<jdavidoa91@gmail.com>",
-  "license": "MIT",
-  "homepage": "https://github.com/NaturalDevCR/atempo-cal#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NaturalDevCR/atempo-cal.git"
-  },
-  "bugs": {
-    "url": "https://github.com/NaturalDevCR/atempo-cal/issues"
-  },
-  "keywords": [
-    "vue",
-    "vue3",
-    "component",
-    "calendar",
-    "scheduler",
-    "resource planner",
-    "atemporal"
-  ],
+  "version": "1.0.0",
+  "description": "A highly customizable Vue 3 calendar component with atemporal library integration",
   "type": "module",
   "main": "./dist/atempo-cal.umd.js",
   "module": "./dist/atempo-cal.es.js",
@@ -32,27 +12,64 @@
       "require": "./dist/atempo-cal.umd.js",
       "types": "./dist/index.d.ts"
     },
-    "./style.css": "./dist/style.css"
+    "./dist/style.css": "./dist/atempo-cal.css"
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "cd demo && vite",
+    "dev:demo": "cd demo && vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "release": "npm run build && npm version patch",
-    "postversion": "npm publish"
+    "build:demo": "cd demo && vite build",
+    "preview": "cd demo && vite preview",
+    "preview:demo": "cd demo && vite preview",
+    "check": "vue-tsc --noEmit && eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "atemporal": "^0.1.0",
-    "vue": "^3.4.21"
+    "vue": "^3.4.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.0",
+    "@rushstack/eslint-patch": "^1.12.0",
+    "@types/node": "^20.10.0",
+    "@vitejs/plugin-vue": "^5.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/tsconfig": "^0.5.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.19.2",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "~5.3.0",
+    "vite": "^5.0.0",
     "vite-plugin-dts": "^3.9.1",
-    "vue-tsc": "^2.0.13"
-  }
+    "vue-tsc": "^1.8.25"
+  },
+  "peerDependencies": {
+    "vue": "^3.4.0",
+    "atemporal": "^0.1.0"
+  },
+  "keywords": [
+    "vue",
+    "vue3",
+    "calendar",
+    "scheduler",
+    "atemporal",
+    "typescript",
+    "tailwind"
+  ],
+  "author": "AtempoCal Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-org/atempo-cal.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-org/atempo-cal/issues"
+  },
+  "homepage": "https://github.com/your-org/atempo-cal#readme"
 }
