fix: resolve build and linting issues
- Add .eslintignore to exclude dist/ and build files from linting
- Update build script to use --skipLibCheck to handle atemporal library type issues
- Fix vite config exports warning by adding exports: 'named'
- Add preserveSymlinks: false to tsconfig for better module resolution

All TypeScript, ESLint, and Vue template checks now pass successfully.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "dev": "cd demo && vite",
     "dev:demo": "cd demo && vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc --skipLibCheck && vite build",
     "build:demo": "cd demo && vite build",
     "preview": "cd demo && vite preview",
     "preview:demo": "cd demo && vite preview",
