--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atempo-cal",
-  "version": "1.0.0",
-  "description": "A highly customizable Vue 3 calendar component with atemporal library integration",
+  "version": "2.0.0",
+  "description": "A Vue 3 weekly scheduling calendar component designed for worker/resource management with dark/light theme support and TypeScript integration",
   "type": "module",
   "main": "./dist/atempo-cal.umd.js",
   "module": "./dist/atempo-cal.es.js",
@@ -26,7 +26,10 @@
     "preview:demo": "cd demo && vite preview",
     "check": "vue-tsc --noEmit && eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "prepublishOnly": "npm run build"
+    "type-check": "vue-tsc --noEmit",
+    "prepublishOnly": "npm run check && npm run build",
+    "release": "standard-version",
+    "publish:npm": "npm publish --access public"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
@@ -43,33 +46,43 @@
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.2",
     "postcss": "^8.4.32",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.0",
+    "tsup": "^8.5.0",
     "typescript": "~5.3.0",
     "vite": "^5.0.0",
     "vite-plugin-dts": "^3.9.1",
     "vue-tsc": "^1.8.25"
   },
   "peerDependencies": {
-    "vue": "^3.4.0",
-    "atemporal": "^0.1.0"
+    "atemporal": "^0.1.0",
+    "vue": "^3.4.0"
   },
   "keywords": [
     "vue",
     "vue3",
     "calendar",
     "scheduler",
+    "weekly-calendar",
+    "resource-scheduling",
+    "worker-scheduling",
     "atemporal",
     "typescript",
-    "tailwind"
+    "tailwind",
+    "dark-theme",
+    "light-theme",
+    "scheduling-component",
+    "employee-scheduling",
+    "shift-planning"
   ],
-  "author": "AtempoCal Team",
+  "author": "Josue Orozco A.",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-org/atempo-cal.git"
+    "url": "git+https://github.com/NaturalDevCR/AtempoCal.git"
   },
   "bugs": {
-    "url": "https://github.com/your-org/atempo-cal/issues"
+    "url": "https://github.com/NaturalDevCR/AtempoCal/issues"
   },
-  "homepage": "https://github.com/your-org/atempo-cal#readme"
+  "homepage": "https://github.com/NaturalDevCR/AtempoCal#readme"
 }
