--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "atempo-cal",
-  "version": "2.0.0",
-  "description": "A Vue 3 weekly scheduling calendar component designed for worker/resource management with dark/light theme support and TypeScript integration",
+  "version": "1.0.0",
+  "description": "A Vue 3 weekly scheduling calendar component designed for workers scheduling management",
   "type": "module",
   "main": "./dist/atempo-cal.umd.js",
   "module": "./dist/atempo-cal.es.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/atempo-cal.es.js",
-      "require": "./dist/atempo-cal.umd.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/atempo-cal.umd.js"
     },
     "./dist/style.css": "./dist/atempo-cal.css"
   },
@@ -24,8 +24,8 @@
     "build:demo": "cd demo && vite build",
     "preview": "cd demo && vite preview",
     "preview:demo": "cd demo && vite preview",
-    "check": "vue-tsc --noEmit && eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "check": "vue-tsc --noEmit && eslint .",
+    "lint": "eslint . --fix",
     "type-check": "vue-tsc --noEmit",
     "prepublishOnly": "npm run check && npm run build",
     "release": "standard-version",
@@ -33,30 +33,33 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
-    "atemporal": "^0.1.0",
-    "vue": "^3.4.0"
+    "atemporal": "0.1.9",
+    "vue": "^3.5.22"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.12.0",
-    "@types/node": "^20.10.0",
-    "@vitejs/plugin-vue": "^5.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.5.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.19.2",
-    "postcss": "^8.4.32",
-    "standard-version": "^9.5.0",
-    "tailwindcss": "^3.4.0",
-    "tsup": "^8.5.0",
-    "typescript": "~5.3.0",
-    "vite": "^5.0.0",
-    "vite-plugin-dts": "^3.9.1",
-    "vue-tsc": "^1.8.25"
+    "@rushstack/eslint-patch": "1.12.0",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/node": "24.5.2",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
+    "@vitejs/plugin-vue": "6.0.1",
+    "@vue/eslint-config-typescript": "14.6.0",
+    "@vue/tsconfig": "0.8.1",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.36.0",
+    "eslint-plugin-vue": "10.5.0",
+    "postcss": "8.5.6",
+    "standard-version": "9.5.0",
+    "tailwindcss": "4.1.13",
+    "tsup": "8.5.0",
+    "typescript": "5.9.2",
+    "vite": "7.1.7",
+    "vite-plugin-dts": "4.5.4",
+    "vue-tsc": "3.0.8"
   },
   "peerDependencies": {
-    "atemporal": "^0.1.0",
-    "vue": "^3.4.0"
+    "atemporal": "0.1.9",
+    "vue": "^3.5.22"
   },
   "keywords": [
     "vue",
