--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-vue": "10.5.0",
     "postcss": "8.5.6",
     "standard-version": "9.5.0",
-    "tailwindcss": "4.1.13",
+    "tailwindcss": "^4.1.13",
     "tsup": "8.5.0",
     "typescript": "5.9.2",
     "vite": "7.1.7",
