--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "atemporal": "0.1.9",
+    "tailwindcss": "^4.0.0",
     "vue": "^3.5.22"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "1.12.0",
+    "@tailwindcss/vite": "^4.1.13",
     "@types/node": "24.5.2",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
@@ -49,7 +52,6 @@
     "eslint-plugin-vue": "10.5.0",
     "postcss": "8.5.6",
     "standard-version": "9.5.0",
-    "tailwindcss": "^3.4.17",
     "tsup": "8.5.0",
     "typescript": "5.9.2",
     "vite": "7.1.7",
