--- a/package.json
+++ b/package.json
@@ -33,24 +33,20 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
-    "@tailwindcss/postcss": "^4.0.0",
     "atemporal": "0.1.9",
-    "tailwindcss": "^4.0.0",
     "vue": "^3.5.22"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "1.12.0",
-    "@tailwindcss/vite": "^4.1.13",
     "@types/node": "24.5.2",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "@vitejs/plugin-vue": "6.0.1",
     "@vue/eslint-config-typescript": "14.6.0",
     "@vue/tsconfig": "0.8.1",
-    "autoprefixer": "10.4.21",
     "eslint": "9.36.0",
     "eslint-plugin-vue": "10.5.0",
-    "postcss": "8.5.6",
+    "sass-embedded": "^1.80.0",
     "standard-version": "9.5.0",
     "tsup": "8.5.0",
     "typescript": "5.9.2",
@@ -72,7 +68,7 @@
     "worker-scheduling",
     "atemporal",
     "typescript",
-    "tailwind",
+    "scss",
     "dark-theme",
     "light-theme",
     "scheduling-component",
