--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,10 @@ jspm_packages/
 # Temporary folders
 tmp/
 temp/
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
