--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue": "^3.5.22"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.1",
     "@rushstack/eslint-patch": "1.12.0",
     "@types/node": "24.5.2",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
